<resources>
    <string name="app_name">TipApp</string>
    <string name="str_tip">Tip Calculator</string>
    <string name="str_cost">Cost of Service</string>
    <string name="str_how_was_the_service">How was the Service?</string>
    <string name="str_amazing_20">Amazing (20%)</string>
    <string name="str_good_18">Good (18%)</string>
    <string name="str_ok_15">OK (15%)</string>
    <string name="str_calculate">Calculate</string>
    <string name="str_tip_amount">Tip Amount</string>
</resources>