<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/topAppBar"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="2dp"
            android:background="@drawable/custom_top_app_bar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_tip"
                android:layout_gravity="center"
                android:fontFamily="@font/bethellen_regular"
                android:textSize="20sp"
                android:textColor="@color/primary"
                android:textStyle="bold"
                />

        </androidx.appcompat.widget.Toolbar>

<EditText
    android:id="@+id/edt_costService"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginTop="20dp"
    android:background="@drawable/custom_border_edit_text"
    android:padding="10dp"
    android:hint="@string/str_cost"
    android:inputType="number"
    android:textAlignment="textStart"
    android:textSize="16sp"
    android:textColor="?attr/colorOnPrimary"
    android:minHeight="48dp"
   app:layout_constraintTop_toBottomOf="@+id/topAppBar"
    app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_head_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_costService"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/str_how_was_the_service"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:checkedButton="@+id/radio_button_1"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_head_radio"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_amazing_20"/>
        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_good_18"/>
        <RadioButton
            android:id="@+id/radio_button_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_ok_15"/>
    </RadioGroup>


    <LinearLayout
        android:id="@+id/round_up_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="Round up Tip?" />

        <Switch
            android:id="@+id/sw_service"
            android:minWidth="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_calculate"
        android:background="@drawable/custom_button_enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/str_calculate"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/round_up_tip"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_calculate"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:textStyle="normal"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:text="@string/str_tip_amount" />

    <ImageView
        android:id="@+id/iv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/image_email"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>